[package]
name = "simulator"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
alloy = "1.1.3"
revm = {version = "33.1.0", features = ["alloydb"]}
tokio = { version = "1.48.0", features = ["full"] }
hex = "0.4"
anyhow = "1.0.100"
thiserror = "2.0.17"
napi = "2"
napi-derive = "2"

[build-dependencies]
napi-build = "2"
