[package]
name = "simulator"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
alloy = "1.1.3"
alloy-rpc-client = "1.4.0"
alloy-json-rpc = "1.4.0"
revm = {version = "33.1.0", features = ["alloydb"]}
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
napi = { version = "3.8", features = ["tokio_rt"] }
napi-derive = "3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
dotenvy = "0.15"

[build-dependencies]
napi-build = "2.3"
